# Networks

DepositeService_udp/client/: CMakeLists.txt  main.c  main.h  packet_creator.c
DepositeService_udp/server/: CMakeLists.txt  client_thread.c  console_thread.c  list_of_clients.c  list_of_deposits.c  main.c  main.h  packet_creator.c  receiveing_thread.c
